--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -163,6 +163,7 @@
      <Compile Include="Assets\Imported\beffio\Medieval Kingdom\Content\Scripts\TreeSwinger.cs" />
      <Compile Include="Assets\Scripts\Inputs\Controls.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\ExitButtonController.cs" />
+     <Compile Include="Assets\Scripts\Units\Type AddOns\Healer.cs" />
      <Compile Include="Assets\Scripts\Units\Unit Assignments\RepairDuty.cs" />
      <Compile Include="Assets\CustomStandaloneInputModule.cs" />
      <Compile Include="Assets\Scripts\UI\SceneLoading.cs" />
@@ -184,7 +185,8 @@
      <Compile Include="Assets\Scripts\Resources\ResourceDropOff.cs" />
      <Compile Include="Assets\Scripts\Menus\OptionsMenu.cs" />
      <Compile Include="Assets\Scripts\Resources\Resources\ResourceManager.cs" />
-     <Compile Include="Assets\Scripts\Units\Type AddOns\Healer.cs" />
+     <Compile Include="Assets\Scripts\Networking\PlayerInfoDisplay.cs" />
+     <Compile Include="Assets\Scripts\Networking\SteamLobby.cs" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\Imported\MedievalKingdomUI\Shaders\Fluid.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
