--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -188,6 +188,7 @@
      <Compile Include="Assets\Scripts\Menus\OptionsMenu.cs" />
      <Compile Include="Assets\Scripts\Resources\Resources\ResourceManager.cs" />
      <Compile Include="Assets\Scripts\Networking\Team.cs" />
+     <Compile Include="Assets\Scripts\Networking\TeamLetter.cs" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\Imported\MedievalKingdomUI\Shaders\Fluid.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
