--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -198,18 +198,54 @@
      <Compile Include="Assets\Scripts\Resources\ResourceDropOff.cs" />
      <Compile Include="Assets\Scripts\Menus\OptionsMenu.cs" />
      <Compile Include="Assets\Scripts\Resources\Resources\ResourceManager.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\LogoCinematic.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralBasics2d.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\TestingUnitTests.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathBezier2d.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSpline2d.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralCameraShake.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralSimpleUI.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSpline.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralEasingTypes.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\Following.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplineEndless.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralBasic.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralAdvancedTechniques.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LTSeq.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralSequencer.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LeanSmooth.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplinePerformance.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LeanTest.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LeanTween.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Archived\TestingPunch.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LeanAudio.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplineTrack.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\TestingZLegacy.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Archived\TestingRigidbodyCS.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathBezier.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\TestingZLegacyExt.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LeanTweenExt.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LTDescrOptional.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplines.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralUISpace.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralEventsListeners.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LTDescr.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Archived\OldGUIExamplesCS.cs" />
+     <Compile Include="Assets\ScaleTween.cs" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\Imported\MedievalKingdomUI\Shaders\Fluid.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\Imported\FogOfWar\Core\Legacy\FogOfWarLegacy.shader" />
      <None Include="Assets\Imported\MedievalKingdomUI\Shaders\Blur.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Stones.shader" />
+     <None Include="Assets\Imported\LeanTween\ReadMe.txt" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Ground_Blending.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\MobileShader\beffio_Mobile.shader" />
      <None Include="Assets\Imported\FogOfWar\Core\FogOfWarUtils.cginc" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Trees.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+     <None Include="Assets\Imported\LeanTween\License.txt" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Fire.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
@@ -237,6 +273,7 @@
      <None Include="Assets\Imported\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
      <None Include="Assets\Imported\Toon_RTS\Undead\Toon RTS Units - Latest update.txt" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Shafts.shader" />
+     <None Include="Assets\Imported\LeanTween\Examples\Archived\2dUnlitWithFade.shader" />
      <None Include="Assets\Mirror\Plugins\Mono.Cecil\License.txt" />
      <None Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURP.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Fabric.shader" />
