--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,61 +36,83 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\LogoCinematic.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Controls\SliderStepController.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarChunkManager.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralBasics2d.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarTeam.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\TestingUnitTests.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarDrawer.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathBezier2d.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarClearFog.cs" />
      <Compile Include="Assets\Scripts\Resources\ResourceNode.cs" />
      <Compile Include="Assets\Scripts\Units\EnemyDetection.cs" />
      <Compile Include="Assets\Scripts\Inputs\CursorHit.cs" />
      <Compile Include="Assets\Scripts\Menus\Lobby\AddComputerPlayerButton.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSpline2d.cs" />
      <Compile Include="Assets\Scripts\Combat\Health.cs" />
      <Compile Include="Assets\Scripts\Game\Steam\SteamCloudPrefs.cs" />
      <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Runtime\UI\bl_LoadingScreenUI.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarBlur.cs" />
      <Compile Include="Assets\Scripts\UI\Cursors.cs" />
+     <Compile Include="Assets\Scripts\Profile\PlayerClass.cs" />
      <Compile Include="Assets\Scripts\Units\Type AddOns\SpellCaster.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralCameraShake.cs" />
+     <Compile Include="Assets\ScaleTween.cs" />
      <Compile Include="Assets\Scripts\Units\Unit Assignments\ClearDeadDuty.cs" />
      <Compile Include="Assets\Scripts\Buildings\CancelBuildingButton.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Controls\ScrollController.cs" />
      <Compile Include="Assets\Imported\beffio\Medieval Kingdom\Content\Scripts\ExplodePart.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Controls\BinarySliderController.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralSimpleUI.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarFogFill.cs" />
      <Compile Include="Assets\Scripts\Units\Unit Assignments\GathererDuty.cs" />
      <Compile Include="Assets\Imported\Loading Screen\Example\Script\bl_LoadingScreenExample.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\Legacy\FogOfWarLegacy.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSpline.cs" />
+     <Compile Include="Assets\Scripts\Units\Type AddOns\Rescuable.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Window\NationPickController.cs" />
      <Compile Include="Assets\Scripts\Menus\MainMenu.cs" />
      <Compile Include="Assets\Scripts\Menus\PauseMenu.cs" />
      <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Enum\LoadingType.cs" />
      <Compile Include="Assets\Imported\beffio\Medieval Kingdom\Content\Scripts\Reflection_pass.cs" />
      <Compile Include="Assets\Scripts\Units\UnitInformation.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralEasingTypes.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\Following.cs" />
      <Compile Include="Assets\Scripts\Combat\Targeter.cs" />
      <Compile Include="Assets\Scripts\Networking\RTSPlayer.cs" />
      <Compile Include="Assets\MenuProfileInformation.cs" />
      <Compile Include="Assets\Scripts\Networking\SteamLobby.cs" />
      <Compile Include="Assets\Imported\beffio\Medieval Kingdom\Content\Scripts\ExplodePartManager.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplineEndless.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralBasic.cs" />
      <Compile Include="Assets\Scripts\Game\Testing.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralAdvancedTechniques.cs" />
      <Compile Include="Assets\Scripts\Combat\Spells\DomeShield.cs" />
      <Compile Include="Assets\TeamParent.cs" />
      <Compile Include="Assets\Scripts\Units\UnitAnimation.cs" />
      <Compile Include="Assets\Scripts\Game\Events\GameEvents.cs" />
      <Compile Include="Assets\Scripts\Units\Unit.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LTSeq.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralSequencer.cs" />
      <Compile Include="Assets\Scripts\Units\UnitProjectile.cs" />
      <Compile Include="Assets\Scripts\Cameras\CameraController.cs" />
      <Compile Include="Assets\LevelButton.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Controls\HighlightToggle.cs" />
      <Compile Include="Assets\Scripts\Units\UnitFiring.cs" />
      <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\ReorderableList\ReorderableArray.cs" />
+     <Compile Include="Assets\Scripts\Profile\HeroClass.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarUnit.cs" />
      <Compile Include="Assets\Scripts\Combat\Spells\Firestorm.cs" />
      <Compile Include="Assets\Scripts\Units\Type AddOns\Corpse.cs" />
      <Compile Include="Assets\Scripts\Research\Technology.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LeanSmooth.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplinePerformance.cs" />
      <Compile Include="Assets\Scripts\Units\UnitSelectionHandler.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test3D\FogOfWar3DMinimapIcon.cs" />
      <Compile Include="Assets\Scripts\UI\UnitButton.cs" />
      <Compile Include="Assets\Scripts\UI\Buttons.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LeanTest.cs" />
      <Compile Include="Assets\Scripts\Game\Steam\SaveLoadFile.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Controls\EventTriggerInvoker.cs" />
      <Compile Include="Assets\Scripts\Units\Tasks\UnitType.cs" />
@@ -98,6 +120,9 @@
      <Compile Include="Assets\Scripts\Units\Unit Assignments\ConstructionDuty.cs" />
      <Compile Include="Assets\Scripts\Buildings\UnitBase.cs" />
      <Compile Include="Assets\Scripts\Menus\JoinLobbyMenu.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LeanTween.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Archived\TestingPunch.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LeanAudio.cs" />
      <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Runtime\Utils\bl_TriggerLoad.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarPostProcessManager.cs" />
      <Compile Include="Assets\Scripts\Cameras\MinimapController.cs" />
@@ -118,11 +143,13 @@
      <Compile Include="Assets\Scripts\Networking\Team.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Samples\Legacy\FogOfWarTestLegacy.cs" />
      <Compile Include="Assets\Scripts\Buildings\BuildingButton.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplineTrack.cs" />
      <Compile Include="Assets\Scripts\Combat\Spell.cs" />
      <Compile Include="Assets\Scripts\Game\Computer AI\ComputerAI.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Window\AnimatedWindowController.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarDrawerSoftware.cs" />
      <Compile Include="Assets\Scripts\Game\Computer AI\PlayerAI.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\TestingZLegacy.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Domain\Nation.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Controls\Transform\TransformInRect.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test2D\FogOfWar2DSimpleAnimator.cs" />
@@ -132,10 +159,12 @@
      <Compile Include="Assets\Scripts\Networking\RTSNetworkManager.cs" />
      <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Global\bl_SceneLoaderUtils.cs" />
      <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Runtime\Main\bl_SceneLoader.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Archived\TestingRigidbodyCS.cs" />
      <Compile Include="Assets\Scripts\Cameras\Minimap.cs" />
      <Compile Include="Assets\Scripts\Buildings\Building.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Window\WindowController.cs" />
      <Compile Include="Assets\Scripts\Menus\UIController.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathBezier.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Window\PopupWindowController.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\HideInFog.cs" />
      <Compile Include="Assets\Scripts\Menus\LobbyMenu.cs" />
@@ -144,6 +173,7 @@
      <Compile Include="Assets\Scripts\Networking\TeamColorSetter.cs" />
      <Compile Include="Assets\Scripts\Units\Tasks\ActionList.cs" />
      <Compile Include="Assets\Scripts\Buildings\ResourceGenerator.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\TestingZLegacyExt.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Samples\FogOfWarDemo.cs" />
      <Compile Include="Assets\Scripts\Units\Tasks\ArmourType.cs" />
      <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\ReorderableList\Attributes\ReorderableLovattoAttribute.cs" />
@@ -179,60 +209,32 @@
      <Compile Include="Assets\Scripts\Units\Unit Assignments\RepairDuty.cs" />
      <Compile Include="Assets\CustomStandaloneInputModule.cs" />
      <Compile Include="Assets\Scripts\UI\SceneLoading.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LeanTweenExt.cs" />
      <Compile Include="Assets\Scripts\Research\TechTree.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LTDescrOptional.cs" />
      <Compile Include="Assets\Scripts\Units\UnitCommandGiver.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Domain\NationProperties.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarMap.cs" />
      <Compile Include="Assets\Scripts\Game\Computer AI\UnitAI.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplines.cs" />
      <Compile Include="Assets\Scripts\Combat\Spells\SpellEffect.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralUISpace.cs" />
      <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Structures\bl_SceneLoaderInfo.cs" />
      <Compile Include="Assets\Scripts\Lighting\EventCycle.cs" />
      <Compile Include="Assets\Scripts\Game\Steam\SteamHandler.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Controls\SliderPercentController.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Controls\ResourceBarController.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarShape.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralEventsListeners.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Framework\LTDescr.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarUtils.cs" />
      <Compile Include="Assets\Scripts\Units\Tasks\UnitRank.cs" />
      <Compile Include="Assets\Scripts\Menus\Lobby\RemoveComputerPlayerButton.cs" />
      <Compile Include="Assets\Scripts\UI\Buttons\SpellButton.cs" />
+     <Compile Include="Assets\Imported\LeanTween\Examples\Archived\OldGUIExamplesCS.cs" />
      <Compile Include="Assets\Scripts\Resources\ResourceDropOff.cs" />
      <Compile Include="Assets\Scripts\Menus\OptionsMenu.cs" />
      <Compile Include="Assets\Scripts\Resources\Resources\ResourceManager.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\LogoCinematic.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralBasics2d.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\TestingUnitTests.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathBezier2d.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSpline2d.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralCameraShake.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralSimpleUI.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSpline.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralEasingTypes.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\Following.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplineEndless.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralBasic.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralAdvancedTechniques.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Framework\LTSeq.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralSequencer.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Framework\LeanSmooth.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplinePerformance.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Framework\LeanTest.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Framework\LeanTween.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Archived\TestingPunch.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Framework\LeanAudio.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplineTrack.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\TestingZLegacy.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Archived\TestingRigidbodyCS.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathBezier.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\TestingZLegacyExt.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Framework\LeanTweenExt.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Framework\LTDescrOptional.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplines.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralUISpace.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\GeneralEventsListeners.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Framework\LTDescr.cs" />
-     <Compile Include="Assets\Imported\LeanTween\Examples\Archived\OldGUIExamplesCS.cs" />
-     <Compile Include="Assets\ScaleTween.cs" />
-     <Compile Include="Assets\Scripts\Units\Type AddOns\Rescuable.cs" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\Imported\MedievalKingdomUI\Shaders\Fluid.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
