--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -152,6 +152,7 @@
      <Compile Include="Assets\Imported\FogOfWar\Samples\Legacy\FogOfWarTestLegacy.cs" />
      <Compile Include="Assets\Scripts\Buildings\BuildingButton.cs" />
      <Compile Include="Assets\Imported\LeanTween\Examples\Scripts\PathSplineTrack.cs" />
+     <Compile Include="Assets\Scripts\Units\ChatDetection.cs" />
      <Compile Include="Assets\Scripts\Combat\Spell.cs" />
      <Compile Include="Assets\Scripts\Game\Computer AI\ComputerAI.cs" />
      <Compile Include="Assets\Imported\MedievalKingdomUI\Scripts\Window\AnimatedWindowController.cs" />
@@ -250,7 +251,6 @@
      <Compile Include="Assets\Scripts\Resources\ResourceDropOff.cs" />
      <Compile Include="Assets\Scripts\Menus\OptionsMenu.cs" />
      <Compile Include="Assets\Scripts\Resources\Resources\ResourceManager.cs" />
-     <Compile Include="Assets\Scripts\Units\ChatDetection.cs" />
      <None Include="Assets\Imported\Samples\Terrain Tools\0.1.0-preview\Terrain Assets\ThirdPartyNotices.txt" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\Imported\MedievalKingdomUI\Shaders\Fluid.shader" />
@@ -311,6 +311,7 @@
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Vegetation.shader" />
      <None Include="Assets\Imported\FogOfWar\Core\FogOfWarHardware.shader" />
+     <None Include="Assets\Prefabs\GamePrefabs\Model Components\SelectionCircle\ProjectorAdditiveTint.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_Sprite.shader" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.1.14f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
